# pytomation

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  makefile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yaml  pr_check.yaml  publish.yaml  push_testing.yaml
docs/concepts/: application.md  context.md  initialization-process.md
docs/decision-record/: 2024-08-31_ci-cd.md  2024-09-02_initializer-chain.md  2024-09-02_module-action-type.md  template.md
old/: action_metadata.py  app.py
old/action_wrapper/depends_on/: __init__.py
old/action_wrapper/profile/: __init__.py
old/cli/: action_command.py  app_factory.py  arguments.py  verify_command.py
old/discovery/: file_discover.py
pytomation/: __main__.py  action.py  action_inventory.py  action_metadata.py  app.py  configuration.py  context.py  errors.py  module.py  module_graph.py  plugin.py  profile.py
pytomation/action/: contract.py
pytomation/action/function/: __init__.py  factory.py  function.py  metadata.py
pytomation/action_wrapper/: util.py
pytomation/action_wrapper/depends_on/: __init__.py  executor.py
pytomation/application/: factory.py
pytomation/cli/: __init__.py  action_command.py  app_factory.py  arguments.py  verify_command.py
pytomation/command/: call_action.py  command.py
pytomation/configuration/: __init__.py  configuration.py  factory.py  initializer_chain.py
pytomation/context/: context_caller.py
pytomation/discovery/: file_discover.py
pytomation/file_builder/: __init__.py  file_builder.py  local_file_builder.py
pytomation/initializer/: context.py  errors.py  initializer.py  types.py
pytomation/module/: __init__.py  factory.py  metadata.py  module.py
pytomation/utils/: __init__.py  chain.py  graph.py  singleton.py  store.py
tests/cli/: test_cli.py  test_import_module.py
tests/projects/: conftest.py
(+54 files in other folders)
